[UPDATE] Added basic navigation without styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MitjaCH | Portfolio</title>
+    <link rel="stylesheet" href="src/styles/styles.css">
 </head>
 <body>
-    
+    <nav>
+        <a class="logo" href="index.html">MITJACH</a>
+        <ul class="nav-links">
+            <li><a href="src/pages/about.html">ABOUT</a></li>
+            <li><a href="src/pages/projects.html">PROJECTS</a></li>
+            <li><a href="src/pages/skills.html">SKILLS</a></li>
+            <li><a href="src/pages/contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
+    <h1>MITJA KURATH</h1>
 </body>
 </html>
