--- a/index.html
+++ b/index.html
@@ -3,19 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MitjaCH | Portfolio</title>
-    <link rel="stylesheet" href="src/styles/styles.css">
+
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+
+    <title>Portfolio | Mitja Kurath</title>
 </head>
 <body>
-    <nav>
-        <a class="logo" href="index.html">MITJACH</a>
-        <ul class="nav-links">
-            <li><a href="src/pages/about.html">ABOUT</a></li>
-            <li><a href="src/pages/projects.html">PROJECTS</a></li>
-            <li><a href="src/pages/skills.html">SKILLS</a></li>
-            <li><a href="src/pages/contact.html">CONTACT</a></li>
-        </ul>
-    </nav>
-    <h1>MITJA KURATH</h1>
+    <div class="container">
+        <nav id="header">
+            <div class="nav-logo">
+                <p class="nav-name">Mitja</p>
+                <span>.</span>
+            </div>
+            <div class="nav-menu" id="navMenu">
+                <ul class="nav-menu-list">
+                    <li class="nav-list">
+                        <a href="#home" class="nav-link active-link">Home</a>
+                        <div class="circle"></div>
+                    </li>
+                    <li class="nav-list">
+                        <a href="#about" class="nav-link">About</a>
+                        <div class="circle"></div>
+                    </li>
+                    <li class="nav-list">
+                        <a href="#skills" class="nav-link">Skills</a>
+                        <div class="circle"></div>
+                    </li>
+                    <li class="nav-list">
+                        <a href="#portfolio" class="nav-link">Portfolio</a>
+                        <div class="circle"></div>
+                    </li>
+                    <li class="nav-list">
+                        <a href="#contact" class="nav-link">Contact</a>
+                        <div class="circle"></div>
+                    </li>
+                </ul>
+            </div>
+            <div class="nav-menu-btn">
+                <i class="uil uil-bars" onclick="myMenuFunction()"></i>
+            </div>
+        </nav>
+    </div>
 </body>
 </html>
