--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,41 +11,87 @@
 
     <title>Portfolio | Mitja Kurath</title>
 </head>
+
 <body>
     <div class="container">
         <nav id="header">
             <div class="nav-logo">
-                <p class="nav-name">Mitja</p>
+                <p class="nav-name">MitjaCH</p>
                 <span>.</span>
             </div>
-            <div class="nav-menu" id="navMenu">
-                <ul class="nav-menu-list">
-                    <li class="nav-list">
+            <div class="nav-menu" id="myNavMenu">
+                <ul class="nav_menu_list">
+                    <li class="nav_list">
                         <a href="#home" class="nav-link active-link">Home</a>
                         <div class="circle"></div>
                     </li>
-                    <li class="nav-list">
+                    <li class="nav_list">
                         <a href="#about" class="nav-link">About</a>
                         <div class="circle"></div>
                     </li>
-                    <li class="nav-list">
+                    <li class="nav_list">
                         <a href="#skills" class="nav-link">Skills</a>
                         <div class="circle"></div>
                     </li>
-                    <li class="nav-list">
-                        <a href="#portfolio" class="nav-link">Portfolio</a>
+                    <li class="nav_list">
+                        <a href="#projects" class="nav-link">Portfolio</a>
                         <div class="circle"></div>
                     </li>
-                    <li class="nav-list">
+                    <li class="nav_list">
                         <a href="#contact" class="nav-link">Contact</a>
                         <div class="circle"></div>
                     </li>
                 </ul>
             </div>
+            <div class="nav-button">
+                <button class="btn">Explore my Work</button>
+            </div>
             <div class="nav-menu-btn">
                 <i class="uil uil-bars" onclick="myMenuFunction()"></i>
             </div>
-        </nav>
+          </nav>
+    
+    
+        <main class="wrapper">
+           <section class="featured-box" id="home">
+              <div class="featured-text">
+                <div class="featured-text-card">
+                    <span>Mitja Kurath</span>
+                </div>
+                <div class="featured-name">
+                    <p>I'm a <span class="typedText"></span></p>
+                </div>
+                <div class="featured-text-info">
+                    <p>Apprentice software developer from Switzerland CH
+                    </p>
+                </div>
+                <div class="featured-text-btn">
+                    <button class="btn blue-btn">See my Work</button>
+                    <button class="btn">Contact Me</button>
+                </div>
+                <div class="social_icons">
+                    <a href="https://www.linkedin.com/in/mitjakurath" target="_blank" class="icon"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://discordapp.com/users/mitjaa" target="_blank" class="icon"><i class="uil uil-discord"></i></a>
+                    <a href="https://github.com/MitjaCH" target="_blank" class="icon"><i class="uil uil-github-alt"></i></a>
+                </div>
+              </div>
+              <div class="featured-image">
+                <div class="image">
+                    <img src="https://avatars.githubusercontent.com/u/123660565?v=4" alt="avatar">
+                </div>
+              </div>
+              <div class="scroll-icon-box">
+                <a href="#about" class="scroll-btn">
+                    <i class="uil uil-mouse-alt"></i>
+                    <p>Scroll Down</p>
+                </a>
+              </div>
+           </section>
+        </main>
     </div>
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
