[UPDATE] Finished website

--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-
     <title>Portfolio | Mitja Kurath</title>
 </head>
 
@@ -34,7 +32,7 @@
                         <div class="circle"></div>
                     </li>
                     <li class="nav_list">
-                        <a href="#projects" class="nav-link">Portfolio</a>
+                        <a href="#portfolio" class="nav-link">Portfolio</a>
                         <div class="circle"></div>
                     </li>
                     <li class="nav_list">
@@ -49,47 +47,202 @@
             <div class="nav-menu-btn">
                 <i class="uil uil-bars" onclick="myMenuFunction()"></i>
             </div>
-          </nav>
-    
-    
-        <main class="wrapper">
-           <section class="featured-box" id="home">
-              <div class="featured-text">
-                <div class="featured-text-card">
-                    <span>Mitja Kurath</span>
-                </div>
-                <div class="featured-name">
-                    <p>I'm a <span class="typedText"></span></p>
-                </div>
-                <div class="featured-text-info">
-                    <p>Apprentice software developer from Switzerland CH
-                    </p>
-                </div>
-                <div class="featured-text-btn">
-                    <button class="btn blue-btn">See my Work</button>
-                    <button class="btn">Contact Me</button>
-                </div>
-                <div class="social_icons">
-                    <a href="https://www.linkedin.com/in/mitjakurath" target="_blank" class="icon"><i class="uil uil-linkedin-alt"></i></a>
-                    <a href="https://discordapp.com/users/mitjaa" target="_blank" class="icon"><i class="uil uil-discord"></i></a>
-                    <a href="https://github.com/MitjaCH" target="_blank" class="icon"><i class="uil uil-github-alt"></i></a>
-                </div>
-              </div>
-              <div class="featured-image">
-                <div class="image">
-                    <img src="https://avatars.githubusercontent.com/u/123660565?v=4" alt="avatar">
-                </div>
-              </div>
-              <div class="scroll-icon-box">
-                <a href="#about" class="scroll-btn">
-                    <i class="uil uil-mouse-alt"></i>
-                    <p>Scroll Down</p>
-                </a>
-              </div>
-           </section>
-        </main>
-    </div>
+        </nav>
 
+        <main class="wrapper">
+            <section class="featured-box" id="home">
+                <div class="featured-text">
+                    <div class="featured-text-card">
+                        <span>Mitja Kurath</span>
+                    </div>
+                    <div class="featured-name">
+                        <p>I'm a <span class="typedText"></span></p>
+                    </div>
+                    <div class="featured-text-info">
+                        <p>Apprentice software developer from Switzerland CH. Passionate about creating innovative and efficient solutions. Enthusiastic learner, constantly improving my skills in various programming languages and frameworks.
+                        </p>
+                    </div>
+                    <div class="featured-text-btn">
+                        <button class="btn blue-btn">See my Work</button>
+                        <button class="btn">Contact Me</button>
+                    </div>
+                    <div class="social_icons">
+                        <a href="https://www.linkedin.com/in/mitjakurath" target="_blank" class="icon"><i class="uil uil-linkedin-alt"></i></a>
+                        <a href="https://discordapp.com/users/mitjaa" target="_blank" class="icon"><i class="uil uil-discord"></i></a>
+                        <a href="https://github.com/MitjaCH" target="_blank" class="icon"><i class="uil uil-github-alt"></i></a>
+                    </div>
+                </div>
+                <div class="featured-image">
+                    <div class="image">
+                        <img src="https://avatars.githubusercontent.com/u/123660565?v=4" alt="avatar">
+                    </div>
+                </div>
+                <div class="scroll-icon-box">
+                    <a href="#about" class="scroll-btn">
+                        <i class="uil uil-mouse-alt"></i>
+                        <p>Scroll Down</p>
+                    </a>
+                </div>
+            </section>
+
+            <section class="section" id="about">
+                <div class="top-header">
+                    <h1>About Me</h1>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="about-info">
+                            <h3>My Introduction</h3>
+                            <p>My name is Mitja, a 16-year-old apprentice software developer currently undergoing an apprenticeship. I am well-versed in HTML, CSS, JavaScript, Java, C, Lua, and other cutting-edge programming languages, frameworks, and libraries, which allows me to implement interactive features. Additionally, I have experience working with Node.js, especially React.js and React-Native.</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="about-image">
+                            <img src="assets/images/mitja.jpg" alt="Mitja Kurath" class="about-img">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section" id="skills">
+                <div class="top-header">
+                    <h1>Skills</h1>
+                </div>
+                <div class="skills-box">
+                    <div class="skills-category">
+                        <h4>Frontend</h4>
+                        <div class="skills-list">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                            <span>React.js</span>
+                        </div>
+                    </div>
+                    <div class="skills-category">
+                        <h4>Mobile Development</h4>
+                        <div class="skills-list">
+                            <span>React-Native</span>
+                            <span>Java</span>
+                        </div>
+                    </div>
+                    <div class="skills-category">
+                        <h4>Backend</h4>
+                        <div class="skills-list">
+                            <span>Node.js</span>
+                            <span>C</span>
+                            <span>Java</span>
+                        </div>
+                    </div>
+                    <div class="skills-category">
+                        <h4>Game-Development</h4>
+                        <div class="skills-list">
+                            <span>Lua</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section" id="portfolio">
+                <div class="top-header">
+                    <h1>Projects</h1>
+                </div>
+                <div class="project-container">
+                    <a href="https://github.com/MitjaCH/Tokenward/mobile-client" target="_blank" class="project-box">
+                        <i class="uil uil-award"></i>
+                        <h3>Tokenward</h3>
+                        <label>Tokenward (Open Source Password Manager)</label>
+                    </a>
+                    <a href="https://github.com/AmbienceLang/Ambience" target="_blank" class="project-box">
+                        <i class="uil uil-award"></i>
+                        <h3>Ambience</h3>
+                        <label>A Programming Language designed <br>to be used by anyone</label>
+                    </a>
+                    <a href="https://github.com/MitjaCH/System-Administration-Tool-SAT" target="_blank" class="project-box">
+                        <i class="uil uil-award"></i>
+                        <h3>SAT (System Administration Tool)</h3>
+                        <label>A Taskmanager alike console application <br> written in Python</label>
+                    </a>
+                    <a href="https://github.com/MitjaCH/random-commenter" target="_blank" class="project-box">
+                        <i class="uil uil-award"></i>
+                        <h3>Random-Commenter</h3>
+                        <label>A Vs Code Extension that randomly adds harmless and funny comments while you are coding.</label>
+                    </a>
+                    <a href="https://github.com/MitjaCH/Lua-Hangman" target="_blank" class="project-box">
+                        <i class="uil uil-award"></i>
+                        <h3>Lua Hangman</h3>
+                        <label>A Simplistic Hangman Game written in Lua</label>
+                    </a>
+                    <a href="https://github.com/MitjaCH/Python-Slotmachine" target="_blank" class="project-box">
+                        <i class="uil uil-award"></i>
+                        <h3>Python Slotmachine</h3>
+                        <label>A Simplistic Python Slotmachine minigame</label>
+                    </a>
+                </div>
+            </section>
+
+            <section class="section" id="contact">
+                <div class="top-header">
+                    <h1>Get in touch</h1>
+                    <span>Do you have a project in your mind, contact me here</span>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="contact-info">
+                            <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
+                            <p><i class="uil uil-envelope"></i> Email: mitjakurath@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-control">
+                            <div class="form-inputs">
+                                <input type="text" class="input-field" placeholder="Name">
+                                <input type="text" class="input-field" placeholder="Email">
+                            </div>
+                            <div class="text-area">
+                                <textarea placeholder="Message"></textarea>
+                            </div>
+                            <div class="form-button">
+                                <button class="btn">Send <i class="uil uil-message"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <div class="top-footer">
+                <p>Mitja Kurath .</p>
+            </div>
+            <div class="middle-footer">
+                <ul class="footer-menu">
+                    <li class="footer_menu_list">
+                        <a href="#home">Home</a>
+                    </li>
+                    <li class="footer_menu_list">
+                        <a href="#about">About</a>
+                    </li>
+                    <li class="footer_menu_list">
+                        <a href="#skills">Skills</a>
+                    </li>
+                    <li class="footer_menu_list">
+                        <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="footer_menu_list">
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-social-icons">
+                <a href="https://www.linkedin.com/in/mitjakurath" target="_blank" class="icon"><i class="uil uil-linkedin-alt"></i></a>
+                <a href="https://discordapp.com/users/mitjaa" target="_blank" class="icon"><i class="uil uil-discord"></i></a>
+                <a href="https://github.com/MitjaCH" target="_blank" class="icon"><i class="uil uil-github-alt"></i></a>
+            </div>
+            <div class="bottom-footer">
+                <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Mitja Kurath</a> - All rights reserved</p>
+            </div>
+        </footer>
+    </div>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="assets/js/script.js"></script>
